--- a/viz/NSL/arrests_month.html
+++ b/viz/NSL/arrests_month.html
@@ -91,7 +91,7 @@
 
     <script>
 
-var data = [{"month":"December 2022","arrests":1},{"month":"November 2022","arrests":3},{"month":"October 2022","arrests":1},{"month":"September 2022","arrests":3},{"month":"August 2022","arrests":6},{"month":"July 2022","arrests":4},{"month":"June 2022","arrests":9},{"month":"May 2022","arrests":8},{"month":"April 2022","arrests":7},{"month":"March 2022","arrests":2},{"month":"February 2022","arrests":5},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":7},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":2},{"month":"September 2021","arrests":12},{"month":"August 2021","arrests":4},{"month":"July 2021","arrests":20},{"month":"June 2021","arrests":7},{"month":"May 2021","arrests":5},{"month":"April 2021","arrests":2},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":68},{"month":"December 2020","arrests":8},{"month":"November 2020","arrests":4},{"month":"October 2020","arrests":3},{"month":"September 2020","arrests":6},{"month":"August 2020","arrests":10},{"month":"July 2020","arrests":15}];
+var data = [{"month":"March 2023","arrests":7},{"month":"February 2023","arrests":0},{"month":"January 2023","arrests":7},{"month":"December 2022","arrests":1},{"month":"November 2022","arrests":3},{"month":"October 2022","arrests":1},{"month":"September 2022","arrests":3},{"month":"August 2022","arrests":6},{"month":"July 2022","arrests":4},{"month":"June 2022","arrests":9},{"month":"May 2022","arrests":8},{"month":"April 2022","arrests":7},{"month":"March 2022","arrests":2},{"month":"February 2022","arrests":5},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":7},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":6},{"month":"September 2021","arrests":12},{"month":"August 2021","arrests":4},{"month":"July 2021","arrests":20},{"month":"June 2021","arrests":10},{"month":"May 2021","arrests":5},{"month":"April 2021","arrests":2},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":68},{"month":"December 2020","arrests":8},{"month":"November 2020","arrests":4},{"month":"October 2020","arrests":3},{"month":"September 2020","arrests":6},{"month":"August 2020","arrests":10},{"month":"July 2020","arrests":15}];
 
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
@@ -170,7 +170,7 @@ var data = [{"month":"December 2022","arrests":1},{"month":"November 2022","arre
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total individuals arrested: 227<br>For people arrested multiple times, only the first arrest is counted here.<br>Individuals with unknown arrest dates are not included in the chart, but are included in the total.</em>");
+    .html("<em>Total individuals arrested: 248<br>For people arrested multiple times, only the first arrest is counted here.<br>Individuals with unknown arrest dates are not included in the chart, but are included in the total.</em>");
 
 
     </script>
