--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -90,7 +90,7 @@
 
     <script>
 
-var data = [{"month":"December 2022","arrests":0},{"month":"November 2022","arrests":2},{"month":"October 2022","arrests":0},{"month":"September 2022","arrests":2},{"month":"August 2022","arrests":1},{"month":"July 2022","arrests":0},{"month":"June 2022","arrests":3},{"month":"May 2022","arrests":11},{"month":"April 2022","arrests":2},{"month":"March 2022","arrests":4},{"month":"February 2022","arrests":4},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":3},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":16},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":12},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":2},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":48},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":2},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
+var data = [{"month":"March 2023","arrests":1},{"month":"February 2023","arrests":0},{"month":"January 2023","arrests":4},{"month":"December 2022","arrests":0},{"month":"November 2022","arrests":2},{"month":"October 2022","arrests":0},{"month":"September 2022","arrests":2},{"month":"August 2022","arrests":1},{"month":"July 2022","arrests":0},{"month":"June 2022","arrests":3},{"month":"May 2022","arrests":11},{"month":"April 2022","arrests":2},{"month":"March 2022","arrests":4},{"month":"February 2022","arrests":4},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":3},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":16},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":12},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":2},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":48},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":2},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
             top: 20,
@@ -169,7 +169,7 @@ var data = [{"month":"December 2022","arrests":0},{"month":"November 2022","arre
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total individuals charged: 135<br>For people charged multiple times, only the first charge is counted here.<br>Individuals with unknown charge dates are not included in the chart, but are included in the total.</em>");
+    .html("<em>Total individuals charged: 140<br>For people charged multiple times, only the first charge is counted here.<br>Individuals with unknown charge dates are not included in the chart, but are included in the total.</em>");
 
 
     </script>
