--- a/viz/NSL/Y2_NSLSedition.html
+++ b/viz/NSL/Y2_NSLSedition.html
@@ -46,9 +46,9 @@ vertical-align: text-top;
 #pieChart {
 text-align:center;
 /* background-color: #FBD999; */
-/* position:relative;
-left:-50px;
-top:-80px; */
+position:relative;
+left:0px;
+top:-90px;
 /* background-color: #FBD603; */
 }
 
@@ -70,8 +70,8 @@ top:-80px; */
 var pie = new d3pie("pieChart", {
 
 	"size": {
-		"canvasWidth": 400,
-		"canvasHeight": 330,
+		"canvasWidth": 250,
+		"canvasHeight": 290,
 		"pieOuterRadius": "30%"
 	},
 	"data": {
@@ -103,18 +103,18 @@ var pie = new d3pie("pieChart", {
 		},
 		"mainLabel": {
 			"color": "#000000",
-			"fontSize": 14,
+			"fontSize": 12,
 			"font": "Arial"
 		},
 		"percentage": {
 			"color": "#000000",
 			"decimalPlaces": 0,
-			"fontSize": 14,
+			"fontSize": 12,
 			"font": "Arial"
 		},
 		"value": {
 			"color": "white",
-			"fontSize": 13
+			"fontSize": 12
 		},
 		"lines": {
 			"enabled": true,
@@ -142,7 +142,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-180,"right":0,"bottom":0,"left":-20} //150
+      "top":0,"right":0,"bottom":0,"left":0} //150
 	}
 
 });
