--- a/viz/NSL/Y2_NSLSedition.html
+++ b/viz/NSL/Y2_NSLSedition.html
@@ -11,8 +11,8 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 360px;
-height: 215px;
+max-width: 250px;
+max-height: 160px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
@@ -24,7 +24,7 @@ max-width: 100%;
 font-size: 16px;
 font-family: Arial;
 font-weight: bold;
-/* margin-bottom:5px; */
+margin-top:15px;
 text-align:center;
 vertical-align: text-top;
 }
