--- a/viz/NSL/convictions_pie_20230701.html
+++ b/viz/NSL/convictions_pie_20230701.html
@@ -12,7 +12,7 @@ body{
 #wrapper {
 width:100%;
 max-width: 360px;
-height: 215px;
+max-height: 250px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
@@ -45,7 +45,7 @@ vertical-align: text-top;
 
 #pieChart {
 text-align:center;
-/* background-color: #FBD999; */
+background-color: #FBD999;
 /* position:relative;
 left:-50px;
 top:-80px; */
