--- a/viz/NSL/convictions_pie_20230701.html
+++ b/viz/NSL/convictions_pie_20230701.html
@@ -45,7 +45,7 @@ vertical-align: text-top;
 
 #pieChart {
 text-align:center;
-background-color: #FBD999;
+/* background-color: #FBD999; */
 /* position:relative;
 left:-50px;
 top:-80px; */
