--- a/viz/NSL/test/top_level_stats1.html
+++ b/viz/NSL/test/top_level_stats1.html
@@ -19,6 +19,22 @@ overflow:hidden;
 /* background-color: #FBD603; */
 }
 
+#header
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 18px;
+/* font-size: 22px; */
+font-family: Arial;
+/* font-weight: bold; */
+margin-bottom:25px;
+margin-left:10px;
+/* margin-left: 20%; */
+text-align:left ;
+/* vertical-align: text-top; */
+vertical-align: middle;
+}
+
 #header_arr
 {
 overflow:hidden;
@@ -81,9 +97,10 @@ vertical-align: middle;
 <body>
 
   <div id="wrapper">
-	<div id="header_arr"><span class='bigger'>300</span> Individuals Arrested</div>
-  <div id="header_chg"><span class='bigger'>200</span> Individuals Charged</div>
-  <div id="header_snt"><span class='bigger'>100</span> Individuals Sentenced</div>
+  <div id="header">Since July 1, 2020, there have been:</div>
+	<div id="header_arr"><span class='bigger'>300</span> Arrested Individuals</div>
+  <div id="header_chg"><span class='bigger'>200</span> Charged Individuals</div>
+  <div id="header_snt"><span class='bigger'>100</span> Sentenced Individuals</div>
   </div>
 
 </body>
