--- a/XJ_prosecutions.html
+++ b/XJ_prosecutions.html
@@ -42,7 +42,7 @@
 				#wrapper
 				{
 				width:100%;
-				/* max-width: 300px; */
+				max-width: 400px;
 				margin:0 auto;
 				overflow:hidden;
 				}
