--- a/XJ_prosecutions.html
+++ b/XJ_prosecutions.html
@@ -42,7 +42,7 @@
 				#wrapper
 				{
 				width:100%;
-				max-width: 400px;
+				/* max-width: 400px; */
 				margin:0 auto;
 				overflow:hidden;
 				}
@@ -96,12 +96,12 @@ var data = [{"month":"2022","arrests":37000}, {"month":"2021","arrests":45000},{
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
             top: 20,
-            right: 20,
+            right: 40,
             bottom: 20,
             left: 40
         };
 
-        var width = 400 - margin.left - margin.right,
+        var width = 370 - margin.left - margin.right,
             height = 400 - margin.top - margin.bottom;
 
         var svg = d3.select("#graphic").append("svg")
