--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -80,13 +80,13 @@ var pie = new d3pie("pieChart", {
 			{
 				"label": "Charged",
 				"value": 159,
-				"color": "#686868"
+				"color": "#0B2F4F"
 			},
 
 {
 "label": "Arrested only",
-"value": 133,
-"color": "#03798D"
+"value": 138,
+"color": "#26716D"
 }
 
 
