--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -88,13 +88,13 @@ var pie = new d3pie("pieChart", {
 			{
 	"label": "Targeted individuals",
 	"value": 30,
-	"color": "#686868"
+	"color": "#0b2f4f"
 },
 
 {
 "label": "Other",
-"value": 262,
-"color": "#03798D"
+"value": 267,
+"color": "#26716d"
 }
 
 
