--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -88,18 +88,18 @@ var pie = new d3pie("pieChart", {
 			{
 				"label": "Speech and other crimes",
 				"value": 20,
-				"color": "#877F6A"
+				"color": "#dd2f26"
 			},
 			{
 	"label": "Only speech crimes",
-	"value": 95,
-	"color": "#686868"
+	"value": 108,
+	"color": "#0b2f4f"
 },
 
 {
 "label": "Other",
-"value": 177,
-"color": "#03798D"
+"value": 169,
+"color": "#26716d"
 }
 
 
