--- a/viz/NSL/arrests_subversion_pie.html
+++ b/viz/NSL/arrests_subversion_pie.html
@@ -91,13 +91,13 @@ var pie = new d3pie("pieChart", {
 			{
 				"label": "Subversion",
 				"value": 69,
-				"color": "#877F6A"
+				"color": "#26716d"
 			},
 
 {
 "label": "Other",
-"value": 223,
-"color": "#03798D"
+"value": 228,
+"color": "#0b2f4f"
 }
 
 
