--- a/viz/NSL/denied_bail_pie.html
+++ b/viz/NSL/denied_bail_pie.html
@@ -79,14 +79,14 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Denied bail",
-				"value": 108,
-				"color": "#686868"
+				"value": 109,
+				"color": "#0b2f4f"
 			},
 
 {
 "label": "Granted bail",
-"value": 51,
-"color": "#03798D"
+"value": 50,
+"color": "#26716d"
 }
 
 
