--- a/viz/NSL/top_level_stats.html
+++ b/viz/NSL/top_level_stats.html
@@ -53,7 +53,7 @@ td.tex {
 
 td.num {
   font-size:200%; 
-  color: #8D0334;
+  color: #dd2f26;
   vertical-align: middle;
   font-weight: bold;
   text-align:right;
@@ -70,9 +70,9 @@ td.num {
 
 <table class="sortable"><tbody>
 
-<tr><td class="num">292</td><td class="tex">Individuals Arrested</td></tr>
+<tr><td class="num">297</td><td class="tex">Individuals Arrested</td></tr>
 <tr><td class="num">159</td><td class="tex">Individuals Charged</td></tr>
-<tr><td class="num">71</td><td class="tex">Individuals Convicted</td></tr>
+<tr><td class="num">77</td><td class="tex">Individuals Convicted</td></tr>
 
 </tbody>
 </table>
