--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>NSL vs. Non-NSL Charges</title>
+<title>Natsec vs Non-Natsec Charges</title>
 <style>
 body {
 		/* max-width: 255px; */
@@ -15,7 +15,7 @@ body {
 
 <body>
 	<div id="wrapper">
-	<div id="header">Number of Individuals Charged for NSL and Non-NSL Offenses</div>
+	<div id="header">Number of Individuals Charged for National Security and Non-National Security Offenses</div>
 	<!-- <div id="subhed">Individuals charged with violating the NSL, individuals arrested by the NSD and not charged under the NSL, and individuals charged with both NSL and non-NSL violations</div> -->
   <div id="venn"></div>
 	</div>
@@ -23,9 +23,9 @@ body {
 
 <style>
 /* https://github.com/benfred/venn.js/blob/master/examples/css_styled.html */
-[data-venn-sets="0"]   { fill: #03798D; }
-[data-venn-sets="1"]   { fill: #686868; }
-[data-venn-sets="0_1"] { fill: #36707a; }
+[data-venn-sets="0"]   { fill: #dd2f26; }
+[data-venn-sets="1"]   { fill: #26716d; }
+[data-venn-sets="0_1"] { fill: #79534D; }
 
 #wrapper
 {
@@ -117,7 +117,7 @@ var div = d3.select("#venn").datum(sets).call(chart);
 
 d3.select("#wrapper").append("div")
    .attr("class", "footnote")
-   .html("<em>The category “NSL” refers to individuals charged with NSL-related offenses. “Non-NSL” refers to individuals charged with sedition, or arrested by the NSD and charged with non-NSL-related offenses.</em>");
+   .html("<em>The category “National Security” refers to individuals charged NSL- or SNSO-related offenses. “Non-National Security” refers to individuals charged with sedition under the Crimes Ordinance, or individuals arrested by the NSD and charged with non-NSL- or non-SNSO-related offenses.</em>");
 
 </script>
 </html>
