--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -117,7 +117,7 @@ var div = d3.select("#venn").datum(sets).call(chart);
 
 d3.select("#wrapper").append("div")
   .attr("class", "footnote")
-  .html("<em>The category “National Security” refers to individuals arrested for NSL- or SNSO-related offenses. “Non-National Security” refers to individuals arrested for sedition under the Crimes Ordinance, or individuals arrested by the NSD for non-NSL- or non-SNSO-related offenses.</em>");
+  .html("<em>The category “National Security” refers to individuals arrested for NSL- or SNSO-related offenses. “Non-National Security” refers to individuals arrested for sedition under the Crimes Ordinance, or individuals arrested by the NSD for other non-NSL- or non-SNSO-related offenses.</em>");
 
 
 </script>
