--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -117,7 +117,7 @@ var div = d3.select("#venn").datum(sets).call(chart);
 
 d3.select("#wrapper").append("div")
    .attr("class", "footnote")
-   .html("<em>The category “National Security” refers to individuals charged NSL- or SNSO-related offenses. “Non-National Security” refers to individuals charged with sedition under the Crimes Ordinance, or individuals arrested by the NSD and charged with non-NSL- or non-SNSO-related offenses.</em>");
+   .html("<em>The category “National Security” refers to individuals charged with NSL- or SNSO-related offenses. “Non-National Security” refers to individuals charged with sedition under the Crimes Ordinance, or individuals arrested by the NSD and charged with other non-NSL- or non-SNSO-related offenses.</em>");
 
 </script>
 </html>
